# NotABot

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  test.yml
cogs/GetMessage/: __init__.py
cogs/Test/: __init__.py
configs/: example.json  main.json  remindme.json  slowest.json
extensions/Example/: __init__.py
extensions/GetAvatar/: __init__.py
extensions/GetMessage/: __init__.py
extensions/Minesweeper/: __init__.py  cell.py  field.py
extensions/RemindMe/: __init__.py  example_database.json
extensions/Topic/: __init__.py
src/notabot/: __init__.py  main.py
src/notabot/extensions/Example/: __init__.py
src/notabot/extensions/GetAvatar/: __init__.py
src/notabot/extensions/GetMessage/: __init__.py
src/notabot/extensions/GetQuote/: __init__.py
src/notabot/extensions/LaTeXConverter/: __init__.py
src/notabot/extensions/Minesweeper/: __init__.py  field.py
src/notabot/extensions/RemindMe/: __init__.py
src/notabot/extensions/SpeechToText/: __init__.py
src/notabot/utils/: __init__.py  color.py  root.py
utils/: color.py
